cmake_minimum_required(VERSION 3.10)
project(camera_device)
set(CMAKE_C_COMPILER gcc-8)
set(CMAKE_CXX_COMPILER g++-8)
set(CMAKE_CXX_STANDARD 17)
message("-------${CMAKE_MODULE_PATH}-------")
file(GLOB SRC ${CMAKE_CURRENT_LIST_DIR}/src/*.cpp)
add_executable(example ${SRC})
find_package(OpenCV REQUIRED)
find_package(DeepirUtil REQUIRED)
find_package(DeepirLog REQUIRED)
find_package(DeepirImage REQUIRED)
find_package(Threads)
FIND_PACKAGE(spdlog REQUIRED)
target_link_libraries(example PUBLIC ${OpenCV_LIBRARIES})
target_link_libraries(example PUBLIC DeepirUtil)
target_link_libraries(example PUBLIC DeepirLog)
target_link_libraries(example PUBLIC stdc++fs)
#target_compile_options(example  PRIVATE "-fsanitize=thread")
#set_target_properties(example PROPERTIES LINK_FLAGS "-fsanitize=thread")
target_link_libraries(example PRIVATE DeepirImage)
target_link_libraries(example PRIVATE Threads::Threads)
